# sketch-wavenet

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post_install.sh
scripts/: generate.py  train.py
scripts/config/: default_config.toml  model_deep.toml  one_cycle.toml
sketch_wavenet/: __init__.py  config.py  data_processing.py  drawing.py  gaussian_mixture.py  logging.py  losses.py  normalization.py  sampling.py  training.py  utils.py  wavenet.py
tests/: conftest.py  test_loss.py  test_losses.py  test_model.py  test_utils.py
