[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sketch_wavenet*"]
namespaces = false

[project]
name = "sketch-wavenet"
version = "0.0.1"
authors = [{ name = "Pierre-Louis Nordmann" }]
description = "Sketch-RNN with a Wavenet."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["jaxtyping==0.2.22", "equinox==0.11.0"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
