[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sketch_wavenet*"]
namespaces = false

[project]
name = "sketch-wavenet"
version = "0.0.1"
authors = [{ name = "Pierre-Louis Nordmann" }]
description = "Sketch-RNN with a Wavenet."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax~=0.4",
    "jaxlib~=0.4",
    "jaxtyping~=0.2.0",
    "equinox~=0.11.0",
    "pytest~=7.4.0",
    "beartype~=0.16.0",
    "optax~=0.1.0",
    "tensorboardX~=2.6.0",
    "tqdm~=4.66",
    "toml~=0.10.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
